--- a/templates/blog.html
+++ b/templates/blog.html
@@ -19,8 +19,8 @@
 
         <ul>
             {% for blog in blogs %}
-            <li>{{blog.title}}</li>
-            <li>{{blog.body}}</li>
+            <li>{{title}}</li>
+            <li>{{body}}</li>
             {% endfor %}
         </ul>
 
