--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -9,6 +9,7 @@
             <textarea name="blog_entry" rows="10" cols="30">
             </textarea>
         </label>
+        <!--input type="hidden" name="blog-id" /-->
         <input type="submit" value='Add Blog Entry' />
     </form>
 
