--- a/templates/blog.html
+++ b/templates/blog.html
@@ -2,27 +2,20 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <!--h1>Build-a-blog</h1>
-    <form method='post'>
-        <label>
-            New blog entry:
-            <input type="text" name='blog' />
-        </label>
-        <input type="submit" value='Add Blog Entry' />
-    </form>
-
-    <hr /-->
-
+    <h1 style="color:#2E2E9C"align="center">Build A Blog</h1>
     {% if blogs|length == 0 %}
-    <p>No blogs yet</p>
+    <p>No blogs yet :/</p>
     {% else %}
 
-        <ul>
+    
             {% for blog in blogs %}
-            <li>{{title}}</li>
-            <li>{{body}}</li>
+            <div>
+            <a href='/blog?id={{blog.id}}'><h2>{{blog.title}}</h2></a>
+            <p>{{blog.body}}</p>
+            <hr>
+            </div>
             {% endfor %}
-        </ul>
+    
 
     {% endif %}
 {% endblock %}
