Not working because of new params, added Login and Sign Up link to base

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,10 @@
         <header>
             <a class="blog_link" href="/blog">Main Blog Page</a>
             <a class="blog_link" href="/newpost">Add a Blog Entry</a>
+
+            <div style='float: right'>
+                  <a href="login">Login</a> | <a href="signup">Sign Up</a>
+              </div>
         </header>
     </head>
 <body>
