Login and Signup are working correctly, need to add logout and tie the owner to the blog

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,10 +23,13 @@
                 }
             </style>
         <header>
-            <a class="blog_link" href="/blog">Main Blog Page</a>
-            <a class="blog_link" href="/newpost">Add a Blog Entry</a>
+            <div style='float: left;'>
+                <a href="/blog">Main Blog Page</a> | <a href="/newpost">Add a Blog Entry</a>
+            </div>
+            <!--a class="blog_link" href="/blog">Main Blog Page</a>
+            <a class="blog_link" href="/newpost">Add a Blog Entry</a-->
 
-            <div style='float: right'>
+            <div style='float: right;'>
                   <a href="login">Login</a> | <a href="signup">Sign Up</a>
               </div>
         </header>
@@ -39,9 +42,6 @@
         {% endfor %}
         </ul>
         {% endwith %}
-        <hr class="base_hr">
-
-
     {% block content %}
     {% endblock %}
 
