--- a/templates/base.html
+++ b/templates/base.html
@@ -9,28 +9,23 @@
                 {
                     color: red;
                 }
-
-                .base_hr
-                {
-                    color:#97A8A8;
-                }
-
-                .blog_link
-                {
-                    padding-right:5px;
-                    padding-left: 5px;
-                    font-size: 0.90em;
-                }
             </style>
         <header>
             <div style='float: left;'>
-                <a href="/blog">Main Blog Page</a> | <a href="/newpost">Add a Blog Entry</a>
+                <a href="/blog">all posts</a> | <a href="/newpost">new post</a> | <a href="/">home</a>
             </div>
             <!--a class="blog_link" href="/blog">Main Blog Page</a>
             <a class="blog_link" href="/newpost">Add a Blog Entry</a-->
 
             <div style='float: right;'>
-                  <a href="login">Login</a> | <a href="signup">Sign Up</a>
+                    {% if 'user' in session %}
+                    {{ session['user'] }}
+                    <form action="/logout" method="post" id='logout'>
+                      <input type="submit" value="Log Out" />
+                    </form>
+                  {% else %}
+                  <a href="login">login</a> | <a href="signup">sign up</a>
+                  {% endif %}
               </div>
         </header>
     </head>
