--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1 style="color:#2E2E9C"align="center">Blogz Users</h1>
+<div class = "container-fluid">
+    <h2 class = "text-primary" align="left">users</h1>
+    <br>
     {% if users|length == 0 %}
     <p>No users yet :/</p>
     {% else %}
 
-    
+        <ul>
             {% for user in users %}
-            <div>
-            <a href='/?user={{user.username}}'><h4>{{user.username}}</h4></a>
-            <hr>
-            </div>
+            <li>
+            <a href='/?user={{user.id}}'><h5>{{user.username}}</h5></a>
+            </li>
             {% endfor %}
-    
-
+        </ul>
+    </div>
     {% endif %}
 {% endblock %}
