--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
-
-<h2>Login</h2>
-<form action="/login" method="post">
-  <p><label>Username<input type="text" name="username"/></label></p>
-  <p><label>Password<input type="password" name="password"/></label></p>
-  <p><input type="submit" value="Login"/></p>
+<div class = "container-fluid">
+<h2 class = "text-primary" align="left">login</h2>
+<br>
+<form class = "form-horizontal" action="/login" method="post">
+  <p><label>Username <input type="text" name="username"/></label></p>
+  <p><label>Password <input type="password" name="password"/></label></p>
+  <p><input type="submit" class="btn btn-primary" value="Login"/></p>
 </form>
-
+<p>Don't have an accout?<a href = '/signup'> <u>Create one!</u></a></p>
+</div>
 {% endblock %}
