--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
-
-<h2>Register New Account</h2>
-<form action="/signup" method="post">
+<div class = "container-fluid">
+<h2 class = "text-primary" align="left">register account</h2>
+<br>
+<form class = "form-horizontal" action="/signup" method="post">
   <p><label>Username <input type="text" name="username"/></label></p>
   <p><label>New Password <input type="password" name="password"/></label></p>
   <p><label>Verify Password <input type="password" name="verify"/></label></p>
-  <p><input type="submit" value="Sign Up!"/></p>
+  <p><input type="submit" class="btn btn-primary" value="Sign Up!"/></p>
 </form>
-
+</div>
 {% endblock %}
